Fix vertical alignment of new item button

--- a/source/css/ChuView.css
+++ b/source/css/ChuView.css
@@ -58,6 +58,7 @@
 	display: inline-block;
 	border-radius: 5px;
 	background-image: none;
+	vertical-align: top;
 }
 
 .onyx-button.chuview-new-item:active {
